--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -27,7 +27,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: fascinated/clippy
+          images: fascinated/s3-cache
           tags: |
             type=raw,value=latest
             type=sha,format=long
